[package]
name = "drcom4scut"
version = "0.3.2"
rust-version = "1.89"
authors = ["SeaLoong <sealoongw@foxmail.com>"]
edition = "2024"
description = "A 3rd-party Drcom client for SCUT."
license = "GPL-3.0-or-later"
readme = "README.md"

[dependencies]
bytes = "1.10.1"
chrono = "0.4.42"
clap = { version = "4.5", features = ["cargo"] }
crossbeam-channel = "0.5.15"
encoding_rs = "0.8.35"
hex = "0.4.3"
hostname = "0.4.1"
log = "0.4.28"
md-5 = "0.10.6"
pnet = "0.35"
rand = "0.9.2"
trust-dns-resolver = "0.23.2"

[dependencies.config]
version = "0.15.15"
default-features = false
features = ["yaml"]

[dependencies.log4rs]
version = "1.4.0"
features = ["gzip"]
optional = true

[profile.release]
opt-level = 3
lto = true
panic = 'abort'
strip = true

[features]
default = ["log4rs"]
